--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>rriyanuariRmdhn</title>
-	<!-- ICON -->
-	<link href="assets/img/yanyan.png" rel="shortcut icon">
-	<!-- CSS -->
-	<link rel="stylesheet" href="assets/css/materialize.min.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<!-- RESPONSIVE -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
 <body>
 	<div id="main">
 	<div class="file-struktur">
 	 	<p>
 	 		<a id="home" class="link">Home</a> 
-	 		<span id="lanjutan">
+	 		<span id="atas">
 	 			<a id="aboutMe2" class="link">/aboutMe</a>
+	 			<a id="contact2" class="link">/Contact</a>
 	 		</span>
 	 	</p>
 	</div>
@@ -33,9 +22,10 @@
 		<div id="container"></div>
 
 	<!-- ------------------- -->
-		<div id="turunan" class="file-struktur">
+		<div id="bawah" class="file-struktur">
 		 	<p>
-		 		<a id="aboutMe1" class="link">/aboutMe</a>
+		 		<a id="aboutMe1" class="link clicklink">/aboutMe</a>
+		 		<a id="contact1" class="link clicklink">/Contact</a>
 		 	</p>
 		</div>
 	</div>
