--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
 	<a href="https://www.instagram.com/rriyanuari/"><img class="sosmed" src="assets/img/instagram.png"></a>
 </div>
 <div class="row">
-	<p class="judul merah">Or you can e-mail me<span class="biru">()</span></p>
+	<p class="judul merah">Or you can send me e-mail<span class="biru">()</span></p>
 	<p class="ijo"><em>rrianuari@gmail.com<em></p>
 </div>
