--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,13 @@
 <br>
 <br>
 
-<div class="row">
-	<p class="judul merah"> findMe<span class="biru">()</span></p>
-	<a href="https://www.instagram.com/rriyanuari/"><img class="sosmed" src="assets/img/instagram.png"></a>
-</div>
-<div class="row">
-	<p class="judul merah">Or you can send me e-mail<span class="biru">()</span></p>
-	<p class="ijo"><em>rrianuari@gmail.com<em></p>
+<div class ="bg z-depth-5"
+	<div class="row">
+		<p class="judul merah"> findMe<span class="biru">()</span></p>
+		<a href="https://www.instagram.com/rriyanuari/"><img class="sosmed" src="assets/img/instagram.png"></a>
+	</div>
+	<div class="row">
+		<p class="judul merah">Or you can send me e-mail<span class="biru">()</span></p>
+		<p class="ijo"><em>rrianuari@gmail.com<em></p>
+	</div>
 </div>
