--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,16 +1,17 @@
  			<div class="row">
 				<p class="judul merah"> aboutMe<span class="biru">()</span></p>
 
-				 <div class="carousel bg z-depth-5">
-    				<a class="carousel-item"><img src="assets/img/yanyan.png"></a>
-    				<a class="carousel-item"><img src="assets/img/riyan1.jpg"></a>
-    				<a class="carousel-item"><img src="assets/img/riyan2.jpg"></a>
-    				<a class="carousel-item"><img src="assets/img/riyan3.jpg"></a>
-    				<a class="carousel-item"><img src="assets/img/riyan4.jpg"></a>
-            <a class="carousel-item"><img src="assets/img/riyan5.jpg"></a>
-            <a class="carousel-item"><img src="assets/img/riyan6.jpg"></a>
-			   </div>
-         <p><em>" A photo can say thousand things "</em></p>
+				<div class="carousel bg z-depth-5">
+					<a class="carousel-item"><img src="assets/img/yanyan.png"></a>
+					<a class="carousel-item"><img src="assets/img/riyan1.jpg"></a>
+					<a class="carousel-item"><img src="assets/img/riyan2.jpg"></a>
+					<a class="carousel-item"><img src="assets/img/riyan3.jpg"></a>
+					<a class="carousel-item"><img src="assets/img/riyan4.jpg"></a>
+					<a class="carousel-item"><img src="assets/img/riyan5.jpg"></a>
+					<a class="carousel-item"><img src="assets/img/riyan6.jpg"></a>
+				</div>
+         			<p><em>" A photo can say thousand things "</em></p>
+			<div/>
 
 			<script type="text/javascript">
 				$(document).ready(function(){
