--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,7 +1,7 @@
  			<div class="row">
 				<p class="judul merah"> aboutMe<span class="biru">()</span></p>
 
-				<div class="carousel bg z-depth-5">
+				<div class="carousel z-depth-5">
 					<a class="carousel-item"><img src="assets/img/yanyan.png"></a>
 					<a class="carousel-item"><img src="assets/img/riyan1.jpg"></a>
 					<a class="carousel-item"><img src="assets/img/riyan2.jpg"></a>
