--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 
-<div class ="bg z-depth-5"
+<div class ="bg z-depth-5">
 	<div class="row">
 		<p class="judul merah"> findMe<span class="biru">()</span></p>
 		<a href="https://www.instagram.com/rriyanuari/"><img class="sosmed" src="assets/img/instagram.png"></a>
