--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>
 		<div class="row">
 			<div class="col s12 m3 l3"></div>
-	    		<p class="typewrite col s12 m6 l6" data-period="2000" data-type='[ "Halo, saya Riyan.", "Iya Riyan.", "19 tahun.", "Tinggal di Tangerang.", "Anime saved me.", "Pernah jadi atlet wkwk.", "Lagi suka ngoding.", "Udah itu aja.", "Ditunggu Kritiknya." ]'>
+	    		<p class="typewrite col s12 m6 l6" data-period="2000" data-type='[ "Halo, saya Riyan.", "Iya Riyan.", "19 tahun.", "Tinggal di Tangerang.", "Lagi suka ngoding.", "Dan yang terakhir.", "I am not a Weaboo.", "I just love watching an anime.", "Ditunggu Kritiknya." ]'>
 				<span class="wrap"></span>
 				</p>
    			<div class="col s12 m3 l3"></div>
