--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		Play music nya, buat yang lagi galau
 		<img src="assets/img/smile.png" class="icon">
 	</p>	
-	<audio loop controls class='center'>
+	<audio controls class='center'>
 		<source src="assets/audio/lemon.mp3" type="audio/wav">
 	</audio>
 	
